Fixing Carousel, Editing Text
Fixing Carousel, Editing Text, The content text needs to be improved.

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,35 @@ i {
     right: 0px;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
+
+ .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+ }
+ 
+ .carousel-control-next-icon {
+   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%%23ff0000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+ } 
+
+.carousel-inner > .item > img {
+  width: 100%;
+}
+
+.carousel-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  height: auto;
+}
+
+.carousel-item {
+  background-color: #81848D;
+}
+
+.carousel-inner {
+  border-radius: 5%;
+}
